@@ -15,15 +15,19 @@
  */
 package dev.morling.onebrc;
 
-import java.io.BufferedReader;
-import java.io.FileReader;
 import java.io.IOException;
+import java.nio.MappedByteBuffer;
+import java.nio.channels.FileChannel;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.StandardOpenOption;
 import java.util.*;
 import java.util.concurrent.*;
 
 public class CalculateAverage_ericxiao {
 
-    private static final String FILE = "./measurements_125M.txt";
+    private static final String FILE = "./measurements.txt";
 
     private static class Station {
         private int min;
@@ -62,63 +66,200 @@ public class CalculateAverage_ericxiao {
 
     }
 
-    static class ProcessFileMap implements Callable<Map<String, Station>> {
+    static class ProcessFileMap implements Callable<Map<String, double[]>> {
+        private Path filePath;
+        private long readStart;
+        private int readLength;
+        private int segmentSize;
+        private boolean lastRead;
 
-        String fileName;
-        private Map<String, Station> measurements;
-
-        public ProcessFileMap(String fileName) {
-            this.fileName = fileName;
-            this.measurements = new HashMap<>(10000);
+        public ProcessFileMap(Path filePath, long readStart, int readLength, int segmentSize, boolean lastRead) {
+            this.filePath = filePath;
+            this.readStart = readStart;
+            this.readLength = readLength;
+            this.segmentSize = segmentSize;
+            this.lastRead = lastRead;
         }
 
-        private void processLine(String line) {
-            int separator = line.indexOf(";");
+        private static class MappedFileReader {
+            private MappedByteBuffer buffer;
+            private FileChannel fch;
 
-            String station = line.substring(0, separator);
-
-            int length = line.length();
-            int measurement = (Integer.parseInt(line.substring(separator + 1, length - 2)) * 10 + // end is - 2, for decimal + one fractional digit.
-                    line.charAt(length - 1) - '0');
-
-            if (measurements.containsKey(station)) {
-                measurements.get(station).setMeasurement(measurement);
+            public MappedFileReader(Path filePath, long offset, int length) throws IOException {
+                try (FileChannel fileChannel = (FileChannel) Files.newByteChannel(filePath, EnumSet.of(StandardOpenOption.READ))) {
+                    this.fch = fileChannel;
+                    this.buffer = fch.map(FileChannel.MapMode.READ_ONLY, offset, length);
+                }
             }
-            else {
-                measurements.put(station, new Station(measurement));
+
+            public int get(byte[] readBytes) {
+                if (buffer.limit() - buffer.position() == 0) {
+                    return -1;
+                }
+
+                int remainingBytes = buffer.limit() - buffer.position();
+                int validBytes = Math.min(readBytes.length, remainingBytes);
+                buffer.get(readBytes, 0, validBytes);
+                return validBytes;
             }
+        }
+
+        private static class ReadPosition {
+            public int position;
+            public int bytesRead;
+            public int validBytes;
+
+            public ReadPosition() {
+                this.position = 0;
+                this.bytesRead = 0;
+                this.validBytes = 4096;
+            }
+        }
+
+        private int seekTill(byte[] segment, int validBytes, int start, char delimiter) {
+            // returns either the index of the delimiter or one after the end of the segment
+            while (start < validBytes && (segment[start] ^ delimiter) != 0)
+                start++;
+            return start;
+        }
+
+        private void readTill(MappedFileReader reader, byte[] src, ReadPosition srcHead, byte[] desintation, int destOffset, char delimiter) {
+            if (srcHead.position == -1) {
+                return;
+            }
+
+            if (srcHead.position == src.length) {
+                srcHead.position = 0;
+                srcHead.validBytes = reader.get(src);
+            }
+
+            int end = seekTill(src, srcHead.validBytes, srcHead.position, delimiter);
+            int length = end - srcHead.position;
+            System.arraycopy(src, srcHead.position, desintation, destOffset, length);
+            srcHead.bytesRead = length;
+
+            // We've read more than a segment without finding the delimiter
+            if (end == srcHead.validBytes) {
+                srcHead.position = 0;
+                srcHead.validBytes = reader.get(src);
+
+                // We have read all bytes in the mapping.
+                if (srcHead.validBytes == -1) {
+                    srcHead.position = -1;
+                    return;
+                }
+
+                end = seekTill(src, srcHead.validBytes, 0, delimiter);
+                System.arraycopy(src, srcHead.position, desintation, destOffset + length, end);
+                srcHead.bytesRead += end;
+            }
+
+            srcHead.position = end;
+        }
+
+        private static void aggValue(HashMap<String, double[]> aggMap, String key, double value) {
+            aggMap.compute(key, (_, v) -> {
+                if (v == null) {
+                    return new double[]{ value, value, value, 1 };
+                }
+                else {
+                    v[0] = Math.min(v[0], value);
+                    v[1] = Math.max(v[1], value);
+                    v[2] = v[2] + value;
+                    v[3] = v[3] + 1;
+                    return v;
+                }
+            });
         }
 
         @Override
-        public Map<String, Station> call() throws Exception {
-            // Code to be executed in the new thread
-            try {
-                BufferedReader reader = new BufferedReader(new FileReader(this.fileName));
-                reader.lines().forEach(this::processLine);
+        public Map<String, double[]> call() throws IOException {
+            String key = "";
+            double value;
+
+            HashMap<String, double[]> aggMap = new HashMap<>();
+            MappedFileReader reader = new MappedFileReader(filePath, this.readStart, this.readLength);
+            ReadPosition parseHead = new ReadPosition();
+
+            byte[] segment = new byte[this.segmentSize];
+            byte[] keyBytes = new byte[100];
+            byte[] valueBytes = new byte[100];
+            boolean partialValue = false;
+
+            parseHead.validBytes = reader.get(segment);
+
+            if (this.readStart != 0) {
+                parseHead.position = seekTill(segment, parseHead.validBytes, 0, '\n');
+                parseHead.position++;
             }
-            catch (IOException e) {
-                throw new RuntimeException(e);
+
+            while (true) {
+                readTill(reader, segment, parseHead, keyBytes, 0, ';');
+                if (parseHead.position == -1) {
+                    break;
+                }
+                key = new String(keyBytes, 0, parseHead.bytesRead, StandardCharsets.UTF_8);
+                parseHead.position++;
+                parseHead.bytesRead = 0;
+                readTill(reader, segment, parseHead, valueBytes, 0, '\n');
+                if (parseHead.position == -1 && !lastRead) {
+                    partialValue = true;
+                    break;
+                }
+                value = Double.parseDouble(new String(valueBytes, 0, parseHead.bytesRead, StandardCharsets.UTF_8));
+                parseHead.position++;
+                parseHead.bytesRead = 0;
+                aggValue(aggMap, key, value);
             }
-            return measurements;
+
+            if (!lastRead) {
+                reader = new MappedFileReader(filePath, readStart + readLength, 4096);
+                reader.get(segment);
+                ReadPosition head = new ReadPosition();
+                if (!partialValue) {
+                    readTill(reader, segment, head, keyBytes, parseHead.bytesRead, ';');
+                    key = new String(keyBytes, 0, parseHead.bytesRead + head.bytesRead, StandardCharsets.UTF_8);
+                }
+                if (partialValue) {
+                    readTill(reader, segment, head, valueBytes, 0, '\n');
+                    value = Double.parseDouble(new String(valueBytes, 0, parseHead.bytesRead + head.bytesRead, StandardCharsets.UTF_8));
+                }
+                else {
+                    head.position++;
+                    readTill(reader, segment, head, valueBytes, 0, '\n');
+                    value = Double.parseDouble(new String(valueBytes, 0, head.bytesRead, StandardCharsets.UTF_8));
+                }
+                aggValue(aggMap, key, value);
+            }
+
+            return aggMap;
         }
     }
 
     public static void main(String[] args) throws Exception {
         int numThreads = Runtime.getRuntime().availableProcessors(); // Use the number of available processors
         ExecutorService executorService = Executors.newFixedThreadPool(numThreads);
-        List<Callable<Map<String, Station>>> callableTasks = new ArrayList<>();
-        for (int i = 0; i < numThreads; ++i) {
-            ProcessFileMap callableTask = new ProcessFileMap(FILE);
+        List<Callable<Map<String, double[]>>> callableTasks = new ArrayList<>();
+        Path filePath = Path.of(FILE);
+        long fileSize = Files.size(filePath);
+        int segmentSize = 4096;
+        int readLength = (int) (fileSize / numThreads);
+        long readStart = 0;
+
+        for (int i = 0; i < numThreads - 1; ++i) {
+            ProcessFileMap callableTask = new ProcessFileMap(filePath, readStart, readLength, segmentSize, false);
+            readStart += readLength;
             callableTasks.add(callableTask);
         }
 
-        List<Map<String, Station>> results = new ArrayList<>();
+        callableTasks.add(new ProcessFileMap(filePath, readStart, (int) (fileSize - readStart), segmentSize, true));
+
+        List<Map<String, double[]>> results = new ArrayList<>();
         try {
-            List<Future<Map<String, Station>>> futures = executorService.invokeAll(callableTasks);
-            for (Future<Map<String, Station>> future : futures) {
+            List<Future<Map<String, double[]>>> futures = executorService.invokeAll(callableTasks);
+            for (Future<Map<String, double[]>> future : futures) {
                 try {
                     results.add(future.get());
-
                 }
                 catch (InterruptedException | ExecutionException e) {
                     e.printStackTrace();
@@ -130,18 +271,29 @@ public class CalculateAverage_ericxiao {
         }
         finally {
             executorService.shutdown();
-            Map<String, Station> mapA = results.get(0);
+            Map<String, double[]> mapA = results.getFirst();
             for (int i = 1; i < numThreads; ++i) {
                 results.get(i).forEach((station, stationMeasurements) -> {
                     if (mapA.containsKey(station)) {
-                        mapA.get(station).mergeStation(stationMeasurements);
+                        double[] measurements = mapA.get(station);
+                        measurements[0] = Math.min(measurements[0], stationMeasurements[0]);
+                        measurements[1] = Math.max(measurements[1], stationMeasurements[1]);
+                        measurements[2] = measurements[2] + stationMeasurements[2];
+                        measurements[3] = measurements[3] + stationMeasurements[3];
                     }
                     else {
                         mapA.put(station, stationMeasurements);
                     }
                 });
             }
-            System.out.println(mapA);
+            // print key and values
+
+            for (Map.Entry<String, double[]> entry : mapA.entrySet()) {
+                double[] measurements = entry.getValue();
+                System.out.println("-" + entry.getKey() + ": " + measurements[0] + "/" + measurements[1] + "/" + measurements[2] / measurements[3]);
+            }
+
+            // System.out.println(mapA);
         }
     }
 }
